Fix nav bug on mobile

--- a/src/css/_sections/header/_header-nav.scss
+++ b/src/css/_sections/header/_header-nav.scss
@@ -57,7 +57,7 @@
 			left: -32px;
 			right: 0;
 			overflow: hidden;
-			z-index: 3;
+			z-index: 100;
 			display: flex;
 			align-items: center;
 			flex-direction: column;
