--- a/src/css/_sections/product/_comparison-slider.scss
+++ b/src/css/_sections/product/_comparison-slider.scss
@@ -3,6 +3,8 @@
   padding-bottom: 40px;
   display: flex;
   justify-content: center;
+  position: relative;
+  z-index: 1;
 }
 
 .comparison-slider .comparison-slider__wrapper {
@@ -57,6 +59,7 @@
   margin-top: -4px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   position: relative;
+  z-index: 1;
 
   @media #{$m-xl} {
     height: 24px;
