--- a/src/css/_sections/product/_review-slider.scss
+++ b/src/css/_sections/product/_review-slider.scss
@@ -9,6 +9,7 @@
 .review_wrapper .container .review_inner h2.section_title {
   margin-bottom: 35px;
   position: relative;
+  z-index: 1;
   font-weight: 700;
   font-size: 64px;
   line-height: 64px;
